# accounting

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml  requirements.txt
qcre/: __init__.py  analysis.py  cli.py  company.py  documents.py  importing.py  sample.py
qcre/cfo/: __init__.py  advisory.py  finance.py  forecast.py  holdvssell.py  kpis.py  underwriting.py
qcre/core/: __init__.py  accounts.py  journal.py  ledger.py  money.py  period.py
qcre/db/: __init__.py  models.py  repo.py  seed.py  store.py
qcre/domain/: __init__.py  events.py  lease.py  mortgage.py  property.py
qcre/reports/: __init__.py  framework.py  render.py  statements.py  tax_schedules.py
qcre/tax/: __init__.py  capital.py  cca.py  corporate.py  estate_freeze.py  optimization.py  personal.py  sales_tax.py  transfer_duty.py  trust.py
qcre/tax/rates/: __init__.py  ratebook.py  y2026.py
qcre/web/: __init__.py  app.py
qcre/web/static/: app.css
qcre/web/templates/: _duty_result.html  _salary_result.html  advisory.html  base.html  citations.html  companies.html  dashboard.html  documents.html  empty.html  estate_freeze.html  forecast.html  import.html  import_review.html  ledger.html  planner.html  properties.html  property_new.html  schedules.html  statements.html  tax.html  transaction_new.html
tests/: conftest.py  test_cfo.py  test_core.py  test_domain.py  test_estate.py  test_import.py  test_multicompany.py  test_persistence.py  test_reports.py  test_schedules.py  test_tax.py  test_web.py
