[project]
name = "qcre"
version = "0.1.0"
description = "Quebec real-estate accounting, tax and CFO decision engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "QCRE" }]
dependencies = [
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "typer>=0.12",
]

[project.optional-dependencies]
pdf = ["weasyprint>=60", "pdfplumber>=0.11"]
ocr = ["pytesseract>=0.3.10", "pdf2image>=1.16", "pillow>=10"]
dev = ["pytest>=8.0", "ruff>=0.4", "httpx>=0.24"]

[project.scripts]
qcre = "qcre.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["qcre*"]

[tool.setuptools.package-data]
# Ship the web templates and static assets inside the wheel (they are not .py files,
# so setuptools would otherwise omit them and the web app would fail on a real install).
"qcre.web" = ["templates/*.html", "static/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
